Fix timeline legend and date picker wrapping
fixes #3915

--- a/indico/modules/rb/client/js/common/timeline/DateNavigator.module.scss
+++ b/indico/modules/rb/client/js/common/timeline/DateNavigator.module.scss
@@ -7,4 +7,9 @@
 
 .date-navigator {
     margin-left: auto;
+
+    .date-navigator-item {
+        font-size: 1em;
+        margin: 0 0.5em 0.5em 0;
+    }
 }
