--- a/indico/modules/rb/client/js/common/timeline/TimelineLegend.module.scss
+++ b/indico/modules/rb/client/js/common/timeline/TimelineLegend.module.scss
@@ -28,7 +28,6 @@
 
         :global(.label) {
             color: white;
-            margin-bottom: 0;
             font-weight: bold;
             border: 1px solid rgba(0, 0, 0, 0.1);
 
